[package]
name = "worlds"
version = "0.1.1"
edition = "2021"

[dependencies]
bevy = "0.14.2"
bevy_pancam = "0.14.0"
bevy_fast_tilemap = { git = "https://github.com/Droggelbecher/bevy-fast-tilemap.git", branch = "master" }
bevy-inspector-egui = { version = "0.27.0", optional = true }
noise = "0.9.0"
rand = "0.8.5"
serde = "1.0.213"
toml = { version = "0.8.19", features = ["parse"] }

[dev-dependencies]
rstest = "0.23.0"
tempfile = "3.13.0"

[features]
default = [
    # Default to a native dev build.
    "dev_native",
]
dev = [
    # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
    "dep:bevy-inspector-egui",
]
dev_native = [
    "dev",
    # Enable asset hot reloading for native dev builds.
    "bevy/file_watcher",
    # Enable embedded asset hot reloading for native dev builds.
    "bevy/embedded_watcher",
]

# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
# In some cases they may still signal poor code quality however, so consider commenting out these lines.
[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"

[lints.rust]
unused = "allow"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
incremental = true

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false
